# maxcoin-wallet-android

./: .gitmodules
app/: CMakeLists.txt  build.gradle
app/src/main/jni/transition/: wallet.c
gradle/wrapper/: gradle-wrapper.properties
