# Sets the minimum version of CMake required to build your native library.
# This ensures that a certain set of CMake features is available to
# your build.

cmake_minimum_required(VERSION 3.4.1)

# Specifies a library name, specifies whether the library is STATIC or
# SHARED, and provides relative paths to the source code. You can
# define multiple libraries by adding multiple add_library() commands,
# and CMake builds them for you. When you build your app, Gradle
# automatically packages shared libraries with your APK.

# now build app's shared lib
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DANDROID_STL=gnustl_static -DANDROID_TOOLCHAIN=clang")

# -Wimplicit-function-declaration
# -Wno-missing-prototypes -Werror=return-type -Wdocumentation -Wunreachable-code-aggressive -Wno-missing-braces
# -Wparentheses -Wswitch -Wno-unused-function -Wunused-label -Wno-unused-parameter -Wunused-variable -Wunused-value -Wempty-body
# -Wconditional-uninitialized -Wno-unknown-pragmas -pedantic -Wshadow -Wfour-char-constants -Wno-conversion -Wconstant-conversion
# -Wint-conversion -Wbool-conversion -Wenum-conversion -Wassign-enum -Wno-shorten-64-to-32 -Wpointer-sign -Wnewline-eof
# -Wdeprecated-declarations -Wno-sign-conversion

add_library( # Specifies the name of the library.
             core-lib

             # Sets the library as a shared library.
             SHARED

             # Provides a relative path to your source file(s).
             src/main/jni/maxwallet-core/BRAddress.c
             src/main/jni/maxwallet-core/BRAddress.h
             src/main/jni/maxwallet-core/BRArray.h
             src/main/jni/maxwallet-core/BRBase58.c
             src/main/jni/maxwallet-core/BRBase58.h
             src/main/jni/maxwallet-core/BRBIP32Sequence.c
             src/main/jni/maxwallet-core/BRBIP32Sequence.h
             src/main/jni/maxwallet-core/BRBIP38Key.c
             src/main/jni/maxwallet-core/BRBIP38Key.h
             src/main/jni/maxwallet-core/BRBIP39Mnemonic.c
             src/main/jni/maxwallet-core/BRBIP39Mnemonic.h
             src/main/jni/maxwallet-core/BRBIP39WordsEn.h
             src/main/jni/maxwallet-core/BRBloomFilter.c
             src/main/jni/maxwallet-core/BRBloomFilter.h
             src/main/jni/maxwallet-core/BRCrypto.c
             src/main/jni/maxwallet-core/BRCrypto.h
             src/main/jni/maxwallet-core/BRInt.h
             src/main/jni/maxwallet-core/BRKeccak.c
             src/main/jni/maxwallet-core/BRKeccak.h
             src/main/jni/maxwallet-core/BRKey.c
             src/main/jni/maxwallet-core/BRKey.h
             src/main/jni/maxwallet-core/BRMerkleBlock.c
             src/main/jni/maxwallet-core/BRMerkleBlock.h
             src/main/jni/maxwallet-core/BRPaymentProtocol.c
             src/main/jni/maxwallet-core/BRPaymentProtocol.h
             src/main/jni/maxwallet-core/BRPeer.c
             src/main/jni/maxwallet-core/BRPeer.h
             src/main/jni/maxwallet-core/BRPeerManager.c
             src/main/jni/maxwallet-core/BRPeerManager.h
             src/main/jni/maxwallet-core/BRSet.c
             src/main/jni/maxwallet-core/BRSet.h
             src/main/jni/maxwallet-core/BRTransaction.c
             src/main/jni/maxwallet-core/BRTransaction.h
             src/main/jni/maxwallet-core/BRWallet.c
             src/main/jni/maxwallet-core/BRWallet.h

             src/main/jni/maxwallet-core/schnorr/cryptopp/3way.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/3way.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/adler32.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/adler32.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/adv-simd.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/aes.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/algebra.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/algebra.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/algparam.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/algparam.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/arc4.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/arc4.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/argnames.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/aria-simd.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/aria.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/aria.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/ariatab.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/asn.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/asn.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/authenc.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/authenc.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/base32.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/base32.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/base64.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/base64.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/basecode.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/basecode.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/bench.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/bfinit.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/blake2-simd.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/blake2.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/blake2.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/blowfish.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/blowfish.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/blumshub.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/blumshub.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/camellia.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/camellia.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/cast.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/cast.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/casts.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/cbcmac.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/cbcmac.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/ccm.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/ccm.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/chacha.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/chacha.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/channels.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/channels.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/cmac.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/cmac.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/config.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/cpu.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/cpu.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/crc-simd.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/crc.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/crc.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/cryptlib.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/cryptlib.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/default.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/default.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/des.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/des.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/dessp.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/dh.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/dh.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/dh2.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/dh2.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/dll.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/dll.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/dmac.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/drbg.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/dsa.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/dsa.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/eax.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/eax.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/ec2n.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/ec2n.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/eccrypto.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/eccrypto.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/ecp.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/ecp.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/ecpoint.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/elgamal.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/elgamal.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/emsa2.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/emsa2.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/eprecomp.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/eprecomp.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/esign.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/esign.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/factory.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/fhmqv.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/files.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/files.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/filters.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/filters.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/fips140.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/fips140.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/fipstest.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/fltrimpl.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/gcm-simd.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/gcm.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/gcm.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/gf2_32.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/gf2_32.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/gf2n.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/gf2n.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/gf256.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/gf256.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/gfpcrypt.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/gfpcrypt.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/gost.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/gost.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/gzip.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/gzip.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/hashfwd.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/hex.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/hex.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/hkdf.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/hmac.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/hmac.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/hrtimer.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/hrtimer.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/ida.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/ida.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/idea.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/idea.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/integer.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/integer.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/iterhash.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/iterhash.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/kalyna.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/kalyna.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/kalynatab.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/keccak.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/keccak.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/lubyrack.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/luc.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/luc.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/mars.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/mars.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/marss.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/md2.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/md2.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/md4.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/md4.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/md5.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/md5.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/mdc.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/mersenne.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/misc.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/misc.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/modarith.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/modes.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/modes.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/modexppc.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/mqueue.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/mqueue.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/mqv.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/mqv.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/naclite.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/nbtheory.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/nbtheory.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/neon-simd.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/network.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/network.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/nr.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/oaep.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/oaep.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/oids.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/osrng.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/osrng.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/padlkrng.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/padlkrng.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/panama.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/panama.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/pch.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/pkcspad.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/pkcspad.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/poly1305.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/poly1305.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/polynomi.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/polynomi.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/ppc-simd.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/ppc-simd.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/pssr.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/pssr.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/pubkey.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/pubkey.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/pwdbased.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/queue.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/queue.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/rabin.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/rabin.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/randpool.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/randpool.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/rc2.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/rc2.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/rc5.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/rc5.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/rc6.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/rc6.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/rdrand.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/rdrand.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/rdtables.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/resource.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/rijndael-simd.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/rijndael.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/rijndael.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/ripemd.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/ripemd.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/rng.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/rng.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/rsa.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/rsa.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/rw.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/rw.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/safer.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/safer.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/salsa.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/salsa.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/scrypt.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/scrypt.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/seal.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/seal.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/secblock.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/seckey.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/seed.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/seed.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/serpent.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/serpent.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/serpentp.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/sha-simd.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/sha.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/sha.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/sha3.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/sha3.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/shacal2-simd.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/shacal2.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/shacal2.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/shark.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/shark.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/sharkbox.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/simon-simd.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/simon.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/simon.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/simple.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/siphash.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/skipjack.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/skipjack.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/sm3.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/sm3.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/sm4.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/sm4.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/smartptr.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/socketft.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/socketft.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/sosemanuk.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/sosemanuk.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/speck-simd.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/speck.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/speck.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/square.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/square.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/squaretb.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/sse-simd.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/stdcpp.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/strciphr.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/strciphr.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/tea.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/tea.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/tftables.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/threefish.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/threefish.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/tiger.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/tiger.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/tigertab.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/trap.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/trdlocal.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/trdlocal.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/trunhash.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/ttmac.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/ttmac.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/tweetnacl.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/tweetnacl.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/twofish.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/twofish.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/validate.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/vmac.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/vmac.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/wait.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/wait.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/wake.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/wake.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/whrlpool.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/whrlpool.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/winpipes.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/words.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/xtr.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/xtr.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/xtrcrypt.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/xtrcrypt.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/zdeflate.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/zdeflate.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/zinflate.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/zinflate.h
             src/main/jni/maxwallet-core/schnorr/cryptopp/zlib.cpp
             src/main/jni/maxwallet-core/schnorr/cryptopp/zlib.h



             src/main/jni/transition/core.c
             src/main/jni/transition/core.h
             src/main/jni/transition/JNIBase58.c
             src/main/jni/transition/JNIBase58.h
             src/main/jni/transition/JNIBIP32Sequence.c
             src/main/jni/transition/JNIBIP32Sequence.h
             src/main/jni/transition/JNIKey.c
             src/main/jni/transition/JNIKey.h
             src/main/jni/transition/PeerManager.c
             src/main/jni/transition/PeerManager.h
             src/main/jni/transition/wallet.c
             src/main/jni/transition/wallet.h
             src/main/jni/maxwallet-core/schnorr/Schnorr.cpp
             src/main/jni/maxwallet-core/schnorr/Schnorr.h)


include_directories(src/main/jni/maxwallet-core/)
include_directories(src/main/jni/maxwallet-core/schnorr/)
include_directories(src/main/jni/maxwallet-core/schnorr/cryptopp/)
include_directories(src/main/jni/maxwallet-core/secp256k1/)
include_directories(src/main/secp/secp256k1/include/)
include_directories(src/main/secp/secp256k1/src/)
include_directories(src/main/secp/secp256k1/)
include_directories(src/main/secp/)

# add lib dependencies
target_link_libraries(
    core-lib
    android
    log)
